# Process this file with automake to produce Makefile.in

include $(top_srcdir)/config/myrules.mak

include Makefile.sources

EXTRA_DIST = \
	Makefile.sources \
	gobo/eiffel.xace gobo/kernel.xace \
	$(TEST_SRC) $(TEST_XACE) $(TEST_ANT) $(TEST_GETEST) \
	$(srcdir)/epxc/base/ldif/*.ldf \
	$(srcdir)/epxc/mime/test*.msg $(srcdir)/epxc/mime/chunk*.msg $(srcdir)/epxc/mime/cgi_input?.txt $(srcdir)/epxc/mime/*.form \
	epxc/http_server/index.html \
	posix/base/test.sh \
	$(TEST_DIR_STRUCT)
